tests/ui/maybe.stderr
error: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> tests/ui/maybe.rs:34:11
   |
34 |     Self: ?Sized,
   |           ^^^^^^

error: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> tests/ui/maybe.rs:45:11
   |
45 |     Self: ?Sized,
   |           ^^^^^^

error: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> tests/ui/maybe.rs:75:12
   |
75 |         T: ?Sized,
   |            ^^^^^^

error: `?Trait` bounds are only permitted at the point where a type parameter is declared
  --> tests/ui/maybe.rs:24:11
   |
24 |     Self: ?Sized,
   |           ^^^^^^
